--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,3 +1,6 @@
-<paths>
-    <external-path name="images" path="Android/data/com.example.myapplication/files/images" />
+<?xml version="1.0" encoding="utf-8"?>
+<paths xmlns:android="http://schemas.android.com/apk/res/android">
+    <external-path
+        name="external_files"
+        path="Android/data/com.example.myapplication/files/" />
 </paths>
